# traderlib

./: .gitignore  CMakeLists.txt  README.md  build_and_package.sh  clean.sh  main.py  setup.py
src/: main.cpp
test/: main.py
tests/: test_traderlib.py
traderlib/: __init__.py  traderlib.pyi
